--- a/nginx.conf
+++ b/nginx.conf
@@ -3,11 +3,13 @@ location / {
 }
 # Rewrite all to index.php. This will trigger next location.
 location @rewriteapp {
-rewrite ^(.*)$ /index.php/$1 last;
+   rewrite ^(.*)$ /index.php/$1 last;
 }
 # Redirect everything to Heroku.
 location ~ ^/index\.php(/|$) { try_files @heroku-fcgi @heroku-fcgi; internal;
 }
 # Return 404 for all other php files not matching the front controller.
-# This prevents access to other php files you don't want to be accessible. location ~ \.php$ {
-return 404; }
+# This prevents access to other php files you don't want to be accessible.
+location ~ \.php$ {
+   return 404;
+}
