--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,9 @@ location @rewriteapp {
    rewrite ^(.*)$ /index.php/$1 last;
 }
 # Redirect everything to Heroku.
-location ~ ^/index\.php(/|$) { try_files @heroku-fcgi @heroku-fcgi; internal;
+location ~ ^/index\.php(/|$) {
+   try_files @heroku-fcgi @heroku-fcgi;
+   internal;
 }
 # Return 404 for all other php files not matching the front controller.
 # This prevents access to other php files you don't want to be accessible.
